skill gap fix, testing nav

--- a/front/src/components/nav/nav_style.css
+++ b/front/src/components/nav/nav_style.css
@@ -38,10 +38,18 @@
 
     .colorFade {
         color: rgb(0, 50, 100);
+        -webkit-animation: text_fade linear;
+        animation: text_fade linear;
+        animation-timeline: scroll();
+        animation-range: 0 200px;
     }
 
     .boxShadow {
         box-shadow: 0 1px 4.5px 0px rgba(0, 0, 0, 0.5);
+        -webkit-animation: shadow_fade linear;
+        animation: shadow_fade linear;
+        animation-timeline: scroll();
+        animation-range: 0 200px;
     }
 }
 
